home: fix day overflow-x

--- a/day.css
+++ b/day.css
@@ -75,4 +75,5 @@
 }
 main {
     color: #000;
+    overflow-x: hidden;
 }
